# Gource

./: CMakeLists.txt  vcpkg.json
data/: CMakeLists.txt
data/fonts/: CMakeLists.txt
data/shaders/: CMakeLists.txt
src/: CMakeLists.txt
src/formats/: commitlog.cpp  cvs2cl.cpp  git.cpp  gitraw.h  svn.cpp
